# air_mochi

./: .gitignore  .gitmodules  README.md  build.sh
Architecture Recovery/: README.md
Architecture Recovery/resources/: grapher
RPiPlay Architecture Recovery/: README.md
RPiPlay Architecture Recovery/resources/: all_rpiplay  grapher.cpp
event transmitter/esp32_mouse_keyboard-master/: sdkconfig
event_transmitter/: python-serial.py
event_transmitter/flv/: package-lock.json
ios_app/: Podfile
ios_app/ARKitExample.xcodeproj/: project.pbxproj
ios_app/AVPlayerExample.xcodeproj/: project.pbxproj
ios_app/AudioDeviceExample.xcodeproj/: project.pbxproj
ios_app/AudioSinkExample.xcodeproj/: project.pbxproj
ios_app/DataTrackExample.xcodeproj/: project.pbxproj
ios_app/MultiPartyExample.xcodeproj/: project.pbxproj
ios_app/ObjCVideoQuickstart.xcodeproj/: project.pbxproj
ios_app/ReplayKitExample.xcodeproj/: project.pbxproj
ios_app/Utils/: Utils.swift
local_server/: README.md  event_type.py  index.js  local_server.py  main.py
main_server/: app.js  index.pug  package.json
python_ssh/: interactive.py  main.py  test.py
server/: .env  README.md  app.js  client.py  package-lock.json  package.json  run_locally.sh
src/: CMakeLists.txt  main.cpp
src/airplay_server/: CMakeLists.txt  airplay_callbacks.cpp  airplay_callbacks.h  airplay_server.cpp  airplay_server.h
src/lib/airplay/: CMakeLists.txt  crypto.c  raop_rtp_mirror.c
src/util/: rtmp_connector.cpp  rtmp_connector.h  util.h
utility_server/: .env  app.js  package-lock.json  package.json
(+61 files in other folders)
